--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,7 +6,9 @@
         <div class="row">
             <div class="col-xs-6 col-md-6">
                 <div class="alert alert-info  ">
-                    <h1 class="display-3 tlt">heading</h1>
+
+                    <h1 class="display-3 tlt">heading   {{session.Doctor.name}}
+                    </h1>
                     <p class="lead">Jumbo helper text Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae dolor ex omnis quae, vitae possimus fugit voluptate hic perferendis placeat quibusdam necessitatibus aperiam, nulla quas minus facilis! Et, aut vero.</p>
                     <hr class="coloredHR">
                     <p>More info</p>
@@ -62,7 +64,7 @@
             
             </div>
             <div class="col-xs-12 col-md-4">
-                <img src="placeholder.png" alt="DEMO">
+                <img src="#" alt="DEMO">
             </div>
         </div>
         </div>
