--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -2,23 +2,34 @@
  <!--hero section-->
 	<div class="limiter">
 		<div class="container-login100">
+			{{!-- <h3 style="text-transform:none" class="badge-info"> <strong>As a user</strong> <strong>As a Doctor</strong> </h3>			 --}}
 			<div class="wrap-login100">
 				<div class="login100-form-title" style="background-image: url(http://im.rediff.com/getahead/2015/nov/25smile.jpg);">
+				
 					<span class="login100-form-title-1 tlt">
 						Sign In
 					</span>
 				</div>
+				<div>
+					
+				<a href="/signinDoctor">
+				<h3 style="width:45%" class="loginDoctor btn btn-info pull-left"> 
+					As a Doctor  <i class="fa fa-heartbeat    "></i> </h3></a> 
 
-				<form class="login100-form validate-form" method="post" action="/signin">
+				{{!-- <h3 style="width:45%"  class=" loginUser btn pull-right btn-success"> As a User <i class="fa fa-user-circle-o" aria-hidden="true"></i> </h3>
+				 --}}
+				</div>
+
+				<form class=" formUser login100-form validate-form" method="post" action="/signin">
 					<div class="wrap-input100 validate-input m-b-26" data-validate="Username is required">
 						<span class="label-input100">Username</span>
 						<input  class="input100" type="text" name="username" placeholder="Enter username">
-						<span class="focus-input100"></span>
+				 		<span class="focus-input100"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-18" data-validate = "Password is required">
 						<span class="label-input100">Password</span>
-						<input autocomplete="" class="input100" type="password" name="password" placeholder="Enter password">
+						<input autocomplete="on" class="input100" type="password" name="password" placeholder="Enter password">
 						<span class="focus-input100"></span>
 					</div>
                     <br>
@@ -32,6 +43,37 @@
 					</div>
                     <h5 style="margin:0; margin-top:40px; ">  Don't Have an account yet<a href="/signup"> Sign up </a></h5>
 				</form>
+			{{!-- form doctor --}}
+
+
+
+
+				{{!-- <form class=" formDoctor login100-form validate-form" method="post" action="/signinDoctor">
+					<div class="wrap-input100 validate-input m-b-26" data-validate="Doctor is required">
+						<span class="label-input100">Dr E-mail:</span>
+						<input  autocomplete="off" class="input100" type="email" name="email" placeholder="Enter Doctor E-mail">
+				 		<span class="focus-input100"></span>
+					</div>
+
+					<div class="wrap-input100 validate-input m-b-18" data-validate = "Password is required">
+						<span class="label-input100">Dr Password</span>
+						<input autocomplete="new-password" class="input100" type="password" name="password" placeholder="Enter Dr password">
+						<span class="focus-input100"></span>
+					</div>
+                    <br>
+                    <br>
+					
+					<div class="container-login100-form-btn">
+						<button type="submit" class=" btn btn-info   login100-form-btn">
+							Login
+						</button>
+                    <input type="hidden" name="_csrf" value="{{csrfToken}}">
+					</div>
+                    <h5 style="margin:0; margin-top:40px; ">  Don't Have an account yet<a href="/signup"> Sign up </a></h5>
+				</form>
+ --}}
+
+		{{!-- form doctor --}}
 
 
 	{{# if messages}}
