--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -35,7 +35,7 @@
                         <input type="hidden" name="_csrf" value="{{csrfToken}}">
 						
 						<button   {{#if error }} disabled="disabled" {{/if}} {{#if errors }} disabled="disabled" {{/if}}    type="submit" class=" btn btn-success   login100-form-btn">
-							Login
+							Sign up 
 						</button>
 					</div>
 
