--- a/views/addDoctor.hbs
+++ b/views/addDoctor.hbs
@@ -19,15 +19,15 @@
                 <div class="row">
                     <div class="col-xs-4 col-md-4">
                 <label  class="badge badge-light" for="name">Dr First Name :  </label>
-                <input  autocomplete="off" type="text" name="first" class="form-control" required placeholder="Name">
+                <input  autocomplete="off" type="text" name="first" class="form-control" required placeholder="First Name">
                     </div>
                     <div class="col-xs-4 col-md-4">
                 <label  class="badge badge-light" for="name">Dr Second Name :  </label>
-                <input  autocomplete="off" type="text" name="second" class="form-control" required placeholder="Name">
+                <input  autocomplete="off" type="text" name="second" class="form-control" required placeholder="Secode Name">
                     </div>
                     <div class="col-xs-4 col-md-4">
                 <label  class="badge badge-light" for="name">Dr Last Name :  </label>
-                <input  autocomplete="off" type="text" name="last" class="form-control" required placeholder="Name">
+                <input  autocomplete="off" type="text" name="last" class="form-control" required placeholder="Last Name">
                     </div>
                 </div>
 
