--- a/views/doctors.hbs
+++ b/views/doctors.hbs
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-xs-6 col-md-6">
                 <label class="tlt"> Dr District </label>
-                <select required class="form-control" name="country" >
+                <select style="text-transform:capitalize"  required class="form-control" name="country" >
                     <option value="">.......</option>
                 {{# each Counts }}
                     <option style="text-transform:capitalize" value="{{this.name}}">{{this.name}}</option>
@@ -24,7 +24,7 @@
             <div class="col-xs-6 col-md-6">
                 <label class="tlt"> Dr Specialities </label>
                 
-                <select required class="form-control" name="category" >
+                <select style="text-transform:capitalize"  required class="form-control" name="category" >
                 <option value="">.......</option>
                 {{# each Cats }}
                     <option style="text-transform:capitalize" value="{{this.name}}">{{this.name}}</option>
